<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_choose_status">

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="388dp"
        android:layout_height="0dp"
        android:background="@color/nextBtn_color"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="81dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="24dp"
        android:text="@string/chooseStatus_status"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/needIncasBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="228dp"
        android:background="@color/notCheckedGray"
        android:text="@string/needIncasation_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/onTestBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="164dp"
        android:background="@color/notCheckedGray"
        android:text="@string/onTest_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/completeBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="100dp"
        android:background="#9b9b9b"
        android:text="@string/Done_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/onWorkBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="40dp"
        android:background="@color/notCheckedGray"
        android:text="@string/onWork_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</android.support.constraint.ConstraintLayout>