<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/id_textfield"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/_id_engineer"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxColorsShow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxColorsShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="256dp"
            android:text="@string/showColors"
            app:layout_constraintBottom_toTopOf="@+id/doneBtn"
            app:layout_constraintStart_toStartOf="@+id/id_textfield"
            app:layout_constraintTop_toBottomOf="@+id/id_textfield" />

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:layout_marginEnd="148dp"
            android:layout_marginStart="148dp"
            android:background="@color/forDoneBtns"
            android:text="@string/ready"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="105dp"
            android:layout_height="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="12dp"
            android:text="@string/identify"
            app:layout_constraintBottom_toTopOf="@+id/id_textfield"
            app:layout_constraintStart_toStartOf="@+id/id_textfield"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>