<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RequestTotalInfoActivity"
    tools:showIn="@layout/activity_request_total_info">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="64dp"
        android:layout_height="78dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        app:backgroundTint="@color/forDoneBtns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="388dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/lightGrey">

        <android.support.design.widget.TabItem
            android:id="@+id/problemTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="problemTag"
            android:text="@string/problem" />

        <android.support.design.widget.TabItem
            android:id="@+id/informationTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info" />

    </android.support.design.widget.TabLayout>

    <TextView
        android:id="@+id/requestInformation"
        android:layout_width="308dp"
        android:layout_height="330dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"

        android:text="@string/exampleText"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>