<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".request_view"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn"
            android:layout_width="315dp"
            android:layout_height="84dp"
            android:layout_marginStart="34dp"
            android:background="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/request_id" />
    </LinearLayout>

    <TextView
        android:id="@+id/request_id"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ticket"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="@+id/time_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/timeTo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress_id" />

    <TextView
        android:id="@+id/adress_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/adress"
        app:layout_constraintStart_toStartOf="@+id/request_id"
        app:layout_constraintTop_toBottomOf="@+id/request_id" />


</android.support.constraint.ConstraintLayout>